tests/paczka2/big_fuzzy/73642645.err
Error in line 2: A474 A474 58,9
Error in line 3: A474 A742 64,6
Error in line 5: dbu1Der A474 73,0
Error in line 15: NBIWj S807 27,3
Error in line 10: kU5HUwLzP A742 92,4
Error in line 24: A474 A995 76,4
Error in line 45: q2iJ S807 27,0
Error in line 63: q2iJ A995 11,3
Error in line 49: 1YFjel A742 49,4
Error in line 52: A474 A995 135,7
Error in line 69: A474 A742 -2,3
Error in line 78: NBIWj A474 11,6
Error in line 74: kU5HUwLzP S807 62,3
Error in line 83: NBIWj S807 51,7
Error in line 80: kU5HUwLzP A474 72,4
Error in line 89: kU5HUwLzP S807 35,4
Error in line 92: euVVlMNT A474 24,0
Error in line 99: ÙBIWj S807 59,4
Error in line 81: dbu1Der A995 21,8
Error in line 112: A474 A742 77,8
Error in line 110: q2iJ A474 40,2
Error in line 101: NBIWj S807 251,9
Error in line 117: NBIWj A474 24,2
Error in line 126: q2iJ S807 145,8
Error in line 124: kU5HUwLzP A742 64,9
Error in line 130: A474 A474 91,5
Error in line 147: kU5HUwLzP A995 20,D
Error in line 149: A474 Sl07 42,4
Error in line 136: A474 S807 48,2
Error in line 145: 1YFjel A474 63,7
Error in line 150: A474 A995 18,2
Error in line 152: dbu1Der A742 0,3
Error in line 170: dbu1Der S807 96,0
Error in line 168: 1YFjel A742 29,4
Error in line 177: 1YFjel A474 55,1
Error in line 184: 1YFjel A742 35,2
Error in line 191: NBIWj S807 57,1
Error in line 206: q2iJ A995 78,0
Error in line 212: kU5HUwLzP S807 5¿,5
Error in line 219: dbu1Der A474 44,4
Error in line 220: q2iJ A742 73,4
Error in line 217: euVVlMNT A995 68,7
Error in line 230: euVVlMNT A474 80,4
Error in line 239: 1YFjel S807 55,0
Error in line 233: NBIWj A995 19,9
